test/testcase/version_1/fail/playlist-nonleaf-content-attribution.xspf
<playlist version="1" xmlns="http://xspf.org/ns/0/">
  <attribution>FORBIDDEN</attribution>
  <trackList />
</playlist>
